# zendag

./: .buildinfo  .coverage  .gitignore  README.md  config_composition.html  dags_and_caching.html  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  sharing_with_intake.html  zenflow.config_utils.html  zenflow.core.html  zenflow.mlflow_utils.html
.doctrees/: config_composition.doctree  dags_and_caching.doctree  index.doctree  quickstart.doctree  sharing_with_intake.doctree
.github/workflows/: cookie-cutter-template-test.yml  zendag-package-ci.yml  zenflow-package-ci.yml
_modules/: index.html
_modules/zendag/: config_utils.html  core.html  mlflow_utils.html
_sources/: config_composition.md.txt  index.md.txt  quickstart.md.txt  sharing_with_intake.md.txt  zenflow.config_utils.md.txt  zenflow.core.md.txt  zenflow.mlflow_utils.md.txt
cookiecutter-zenflow-template/: README.md  cookiecutter.json  pixi.toml  pyproject.toml
cookiecutter-zenflow-template/configs/: example_stage.py
cookiecutter-zenflow-template/configure/: __main__.py
cookiecutter-zenflow-template/{{cookiecutter.project_slug}}/stages/: example_stage.py
docs/: conf.py  config_composition.md  dags_and_caching.md  index.md  quickstart.md  sharing_with_intake.md  zenflow.config_utils.md  zenflow.core.md  zenflow.mlflow_utils.md
hydra_plugins/: zendag_config_search_path.py
notebooks/: zendag_demo.py  zendag_demo_default_file_struct.py
tests/: conftest.py  test_config_utils.py  test_core.py  test_ml_flow_utils.py
zendag/: __init__.py  config_utils.py  core.py  mlflow_utils.py  run.py
zendag_hydra_conf/: __init__.py
zendag_hydra_conf/hydra/callbacks/: basic_logging.yaml  link_cwd.yaml  link_projroot.yaml
zendag_hydra_conf/zendag/: base.yaml
zenflow/: __init__.py  config_utils.py  core.py  mlflow_utils.py  start_pipeline.py
