[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email= "{{ cookiecutter.author_email }}"}]
dependencies = []
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.project_description }}", "configure", "configs"]
